Fix visibility issue with footer

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,15 @@ a, a:visited {
   opacity: 80%;
 }
 
+/* Footer */
+.footer {
+  color: #FFFFFF;
+  font-size: 9pt;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 30px 0;
+}
+
 /* About */
 .container {
   display: flex;
@@ -139,12 +148,4 @@ ul {
   margin: 50px auto 0 auto;
   border-radius: 15px;
   opacity: 20%;
-}
-
-/* Footer */
-.footer {
-  font-size: 8pt;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 30px 0;
 }
